Updating DL to DReal Conversion logic for Box Modality, Angular Modality, Sequential composition and assignment variable in a program